Added GLFW3 C libraries
Other notes:
- Updated/improved VSCode compability
- Slight changes to our main file
- Added demo file text, will be finished later

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,13 +8,14 @@
             "args": [
                 "main.c",
                 "-o", "main",
-                "-I/path/to/nuklear",
-                "-I/path/to/glfw/include",
-                "-L/path/to/glfw/lib",
+                "-I./Modules/GLFW/H",
+                "-I./Modules/Nuklear",
+                "-L./Modules/GLFW/LIB",
                 "-lglfw3",
-                "-framework", "OpenGL",
-                "-lGLEW",
-                "-ldl"
+                "-lgdi32",  // Required for GLFW on Windows
+                "-lopengl32", // OpenGL library on Windows
+                "-lm",  // Link math library
+                "-ldl"  // Link dynamic library loader
             ],
             "group": {
                 "kind": "build",
